--- a/lang/en.yml
+++ b/lang/en.yml
@@ -4,6 +4,7 @@ timesheet_date_to_label: To
 timesheet_project_label: Project
 timesheet_activities_label: Activity
 timesheet_users_label: Users
+timesheet_group_by: Group by
+timesheet_trackers_label: Tracker
 timesheet_showing_users: 'showing time for: '
 timesheet_permalink: '(Permalink to this timesheet)'
-timesheet_group_by: Group by
